--- a/octoprint_printer_poweroff/templates/printer_poweroff_settings.jinja2
+++ b/octoprint_printer_poweroff/templates/printer_poweroff_settings.jinja2
@@ -24,6 +24,18 @@
         </div>
     </div>
     <div class="control-group">
+        <label class="control-label">{{ _('Cut-off Extruder Temp') }}</label>
+        <div class="controls">
+            <input type="text" class="input-block-level" data-bind="value: settings.plugins.printer_poweroff.max_extruder_temp">
+        </div>
+    </div>
+    <div class="control-group">
+        <label class="control-label">{{ _('Cut-off Bed Temp') }}</label>
+        <div class="controls">
+            <input type="text" class="input-block-level" data-bind="value: settings.plugins.printer_poweroff.max_bed_temp">
+        </div>
+    </div>
+    <div class="control-group">
         <label class="control-label">{{ _('Enabled') }}</label>
         <div class="controls">
             <input type="checkbox" class="input-block-level" style="margin-top: 0" data-bind="checked: settings.plugins.printer_poweroff.enabled">
